@@ -2,6 +2,8 @@ Revision history for perl distribution OpenAPI-Client
 
 0.23 Not Released
  - Add documentation for option --information|-I
+ - Printed documentation has $ref resolved
+   Can be turned off with JSON_VALIDATOR_REPLACE=0
 
 0.22 2019-01-25T14:45:56+0900
  - Updated documentation to use $client instead of $self
